--- a/_notebooks/2022-12-05-lesson4.ipynb
+++ b/_notebooks/2022-12-05-lesson4.ipynb
@@ -7,7 +7,7 @@
     "# Sections 3.8 and 3.10\n",
     "> \n",
     "\n",
-    "- title: Lists and Iteration\n",
+    "- title: Sections 3.8 and 3.10 \n",
     "- toc: true\n",
     "- badges: false\n",
     "- permalink: /lesson4\n",
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'grape', 'strawberry']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"apple\", \"grape\", \"strawberry\"]\n",
     "print (fruits)"
@@ -45,13 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3897553703.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    const fruits = [\"apple\", \"grape\", \"strawberry\"];\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "const fruits = [\"apple\", \"grape\", \"strawberry\"];"
    ]
@@ -105,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grape\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"apple\", \"grape\", \"strawberry\"]\n",
     "index = 1\n",
@@ -136,26 +161,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['football', 'soccer', 'baseball', 'basketball']\n",
+      "['football', 'hockey', 'baseball', 'basketball']\n"
+     ]
+    }
+   ],
    "source": [
     "sports = [\"football\", \"soccer\", \"baseball\", \"basketball\"]\n",
     "\n",
     "# change the value \"soccer\" to \"hockey\"\n",
-    "print (sports)\n"
+    "print (sports)\n",
+    "\n",
+    "sports.remove(\"soccer\")\n",
+    "sports.insert(1,\"hockey\")\n",
+    "print (sports)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['football', 'soccer', 'baseball', 'basketball']\n",
+      "['football', 'soccer', 'golf', 'baseball', 'basketball']\n"
+     ]
+    }
+   ],
    "source": [
     "sports = [\"football\", \"soccer\", \"baseball\", \"basketball\"]\n",
     "\n",
     "# add \"golf\" as the 3rd element in the list\n",
+    "print (sports)\n",
+    "\n",
+    "sports.insert (2, \"golf\")\n",
     "print (sports)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In python.. indices start at 0!!"
    ]
   },
   {
@@ -165,7 +222,7 @@
     "### Try this\n",
     "- Determine the output of the code segment\n",
     "\n",
-    "![pic](../images/sudocode.png)"
+    "# the output would be ['unusual', 'bold', 'away']"
    ]
   },
   {
@@ -442,7 +499,7 @@
     "### Else, elif, and break\n",
     "> For when 1 statement isn't enough \n",
     "- Else: when the condition does not meet, do statement()\n",
-    "- Elif: when the condition does not meet, but meets another condition, do statement()\n",
+    "- Elif: when the condition does not meet, but meets another condition, do statement() --- either/or \n",
     "- Break: stop the loop"
    ]
   },
@@ -465,14 +522,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob :\n",
+      "['b', 'o', 'b']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb Cell 34\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m letters \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(inp)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(letters)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mrange\u001b[39;49m(letters))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m words:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mif\u001b[39;00m x \u001b[39m==\u001b[39m n:\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
    "source": [
     "words = [\"alfa\", \"bravo\", \"charlie\", \"delta\", \"echo\", \"foxtrot\", \"golf\", \"hotel\", \"india\", \"juliett\", \"kilo\",\n",
     "\"lima\", \"mike\", \"november\", \"oscar\", \"papa\", \"quebec\", \"romeo\", \"sierra\", \"tango\", \"uniform\", \"victor\", \"whiskey\", \"xray\", \"yankee\", \"zulu\"]\n",
     "\n",
-    "inp = input().lower()"
+    "inp = input().lower()\n",
+    "print(inp, \":\")\n",
+    "\n",
+    "letters = list(inp)\n",
+    "print(letters)\n",
+    "\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -488,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,13 +592,21 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9], [' ', 0, ' ']]\n"
+     ]
+    }
+   ],
    "source": [
     "# Better example matrix\n",
     "keypad =   [[1, 2, 3],\n",
     "            [4, 5, 6],\n",
     "            [7, 8, 9],\n",
-    "            [\" \", 0, \" \"]]"
+    "            [\" \", 0, \" \"]]\n"
    ]
   },
   {
@@ -604,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -623,8 +715,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the * changes all the indices of the list into strings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,17 +740,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<list_iterator at 0x10dd9b670>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def print_matrix4(matrix):\n",
-    "    code = \"your code goes here\""
+    "newMatrix = [[\"X\", \"O\", \"X\"], \n",
+    "            [\"X\", \"X\", \"O\"],\n",
+    "            [\"O\", \"O\", \"O\"]]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
