--- a/_notebooks/2022-12-05-lesson4.ipynb
+++ b/_notebooks/2022-12-05-lesson4.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -65,7 +65,7 @@
      "evalue": "invalid syntax (3897553703.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    const fruits = [\"apple\", \"grape\", \"strawberry\"];\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [63]\u001b[0;36m\u001b[0m\n\u001b[0;31m    const fruits = [\"apple\", \"grape\", \"strawberry\"];\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -521,27 +521,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW Assignment Pt 1: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bob :\n",
-      "['b', 'o', 'b']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb Cell 34\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m letters \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(inp)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(letters)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mrange\u001b[39;49m(letters))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m words:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-05-lesson4.ipynb#X44sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mif\u001b[39;00m x \u001b[39m==\u001b[39m n:\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+      "your word: green\n",
+      "\n",
+      "the NATO code:\n",
+      "golf\n",
+      "romeo\n",
+      "echo\n",
+      "echo\n",
+      "november\n"
      ]
     }
    ],
@@ -549,11 +551,18 @@
     "words = [\"alfa\", \"bravo\", \"charlie\", \"delta\", \"echo\", \"foxtrot\", \"golf\", \"hotel\", \"india\", \"juliett\", \"kilo\",\n",
     "\"lima\", \"mike\", \"november\", \"oscar\", \"papa\", \"quebec\", \"romeo\", \"sierra\", \"tango\", \"uniform\", \"victor\", \"whiskey\", \"xray\", \"yankee\", \"zulu\"]\n",
     "\n",
-    "inp = input().lower()\n",
-    "print(inp, \":\")\n",
+    "inp = input(\"\").lower()\n",
     "\n",
+    "print(\"your word:\", inp)\n",
+    "print(\"\")\n",
+    "print(\"the NATO code:\")\n",
     "letters = list(inp)\n",
-    "print(letters)\n",
+    "for n in inp:\n",
+    "    for nato in words: \n",
+    "        if nato[0] == n:\n",
+    "            print(nato)\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "    \n"
@@ -572,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -718,12 +727,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the * changes all the indices of the list into strings"
+    "<b> NOTE: the * changes all the indices of the list into strings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,31 +748,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<list_iterator at 0x10dd9b670>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "newMatrix = [[\"X\", \"O\", \"X\"], \n",
-    "            [\"X\", \"X\", \"O\"],\n",
-    "            [\"O\", \"O\", \"O\"]]\n",
-    "\n"
+    "# HW Assignment Pt 2: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "4 5 6\n",
+      "7 8 9\n",
+      "  0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "    \n",
+    "# Keypad: \n",
+    "\n",
+    "keypad =   [[\"1\", \"2\", \"3\"],\n",
+    "            [\"4\", \"5\", \"6\"],\n",
+    "            [\"7\", \"8\", \"9\"],\n",
+    "            [\" \", \"0\", \" \"]]\n",
+    "\n",
+    "m = 0\n",
+    "while m < len(keypad):\n",
+    "    print(*keypad[m])\n",
+    "    m = m + 1\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW Assignment Pt 3: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +820,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I was born in May, and am 16 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -802,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
