--- a/_notebooks/2022-12-05-lesson4.ipynb
+++ b/_notebooks/2022-12-05-lesson4.ipynb
@@ -521,13 +521,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# HW Assignment Pt 1: "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -751,6 +744,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HW Assignment Pt 1: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = [\"alfa\", \"bravo\", \"charlie\", \"delta\", \"echo\", \"foxtrot\", \"golf\", \"hotel\", \"india\", \"juliett\", \"kilo\",\n",
+    "\"lima\", \"mike\", \"november\", \"oscar\", \"papa\", \"quebec\", \"romeo\", \"sierra\", \"tango\", \"uniform\", \"victor\", \"whiskey\", \"xray\", \"yankee\", \"zulu\"]\n",
+    "\n",
+    "inp = input(\"\").lower()\n",
+    "\n",
+    "print(\"your word:\", inp)\n",
+    "print(\"\")\n",
+    "print(\"the NATO code:\")\n",
+    "letters = list(inp)\n",
+    "for n in inp:\n",
+    "    for nato in words: \n",
+    "        if nato[0] == n:\n",
+    "            print(nato)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# HW Assignment Pt 2: "
    ]
   },
@@ -798,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,18 +839,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "month:\n",
+      "M A Y\n",
+      "\n",
+      "age:\n",
+      "1 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# I was born in May, and am 16 "
+    "# I was born in May, and I am 16 y/o \n",
+    "\n",
+    "\n",
+    "print(\"month:\")\n",
+    "print(keyboard[3][6], keyboard[2][0], keyboard[1][5])\n",
+    "print(\"\")\n",
+    "print(\"age:\")\n",
+    "print(keyboard[0][1], keyboard[0][6])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge\n",
+    "# HW Challenge:\n",
     "Change all of the letters that you DIDN'T print above to spaces, \" \", and then print the full keyboard. (the things you did print should remain in the same spot)\n",
     "\n",
     "Alternative Challenge: If you would prefer, animate it using some form of delay so it flashes one of your letters at a time on the board in order and repeats. (this one may be slightly more intuitive)\n",
@@ -865,6 +907,13 @@
     "\n",
     "I do expect an attempt so write some code to show you tried the challenge. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
