--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -7,7 +7,11 @@
     "# Unit 3 Vocab\n",
     "\n",
     "\n",
-    "## Lessons so far: \n",
+    "- title: Unit 3 Vocab\n",
+    "- toc: true\n",
+    "- badges: false\n",
+    "\n",
+    "## Lessons so far \n",
     "- 1: Sections 3.1 and 3.2: Variables, Assignments, and Data Abstractions \n",
     "- 2: Sections 3.3 and 3.4: Mathematical Expressions and Strings\n",
     "- 3: Sections 3.5, 3.6, and 3.7: Boolean Expression, Conditionals, and Nested Conditionals\n",
