--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -5,12 +5,17 @@
    "metadata": {},
    "source": [
     "# Unit 3 Vocab\n",
-    "\n",
+    "> \n",
     "\n",
     "- title: Unit 3 Vocab\n",
     "- toc: true\n",
-    "- badges: false\n",
-    "\n",
+    "- badges: false"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lessons so far \n",
     "- 1: Sections 3.1 and 3.2: Variables, Assignments, and Data Abstractions \n",
     "- 2: Sections 3.3 and 3.4: Mathematical Expressions and Strings\n",
