--- a/_notebooks/2022-12-06-lesson5.ipynb
+++ b/_notebooks/2022-12-06-lesson5.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "    - Please raise your hand if you are having trouble with wget and we will come around and help you\n",
     "\n",
-    "- Note: if you have a separate notebook that you take notes on and you also want to do your practice in that notebook, you can copy and paste cells from this notebook by left clicking next to any markdown or code cell (indicating that it is selected), do ctl+c or cmd+c, and go to the desired notebook and do ctl+v or cmd+v (if that doesn't work, try just c and v with no ctl or cmd)"
+    "- Note: if you have a separate notebook that you take notes on and you also want to do your practice in that notebook, you can copy and paste cells from this notebook by left clicking next to any markdown or code cell (indicating that it is selected), do ctl+c or cmd+c, and go to the desired notebook and do ctl+v or cmd+v (if that doesn't work, try just c and v w/ no ctl or cmd)"
    ]
   },
   {
@@ -72,7 +72,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![f](../images/lesson1.png)\n",
     "\n",
     "The pseudocode above is translated to python for you. \n",
     "\n",
@@ -88,9 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's too hot outside!\n"
+     ]
+    }
+   ],
    "source": [
     "temp = int(input(\"Select a temperature from 0 to 99 degrees F\"))\n",
     "if (temp >= 90):\n",
@@ -105,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is too cold outside!\n"
+     ]
+    }
+   ],
    "source": [
     "temp = int(input(\"Select a temperature from 0 to 99 degrees F\"))\n",
     "if (temp >= 90):\n",
@@ -143,16 +158,23 @@
     "\n",
     "Can either Boolean expression on the right replace the conditional on the left? Assume isWeekday and isHoliday are Boolean variables.\n",
     "\n",
-    "![f](../images/lesson13.png)\n",
     "\n",
     "*NOTE = you can edit the variables to check the conditions needed!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "IsHoliday = False\n",
     "IsWeekday = True\n",
@@ -180,14 +202,12 @@
     "\n",
     "Combining both conditionals, you get option 2, which is not IsHoliday and IsWeekday. This is why option 2 is right!\n",
     "\n",
-    "![f](../images/lesson14.png)\n",
     "\n",
     "\n",
     "## Example 3 | Conditionals vs Booleans\n",
     "\n",
     "The following algorithms are intended to sum the odd numbers from 1-9. Which algorithms work as intended?\n",
     "\n",
-    "![f](../images/lesson9.png)\n",
     "\n",
     "Below, I have translated the block code into python, import this to your jupyter notebook and record the result. What do you notice?\n",
     "\n",
@@ -260,7 +280,6 @@
    "source": [
     "When we start our initializing left sum as 1 counter as 3 we had no iterations yet. Remember we're going to have to repeat this four times because the block code prompts us to repeat 4 times, so we iterate. So as we go through and follow what the block gives us.\n",
     "\n",
-    "![f](../images/lesson10.png)\n",
     "\n",
     "So you see that the sum does work, it does sum up the odd numbers from 1-9\n",
     "\n",
@@ -272,7 +291,6 @@
     "\n",
     "So we keep adding until -1, that is when the counter < 1 is true, so we stop\n",
     "\n",
-    "![f](../images/lesson12.png)\n",
     "\n",
     "So why is it important to understand that algorithms can be written in different ways and still accomplish the same task?\n",
     "\n",
@@ -356,7 +374,6 @@
     "## Example A Possible Solution (using Selection)\n",
     "\n",
     "\n",
-    "![Flowchart for Example A](../images/3-9Lesson2ExampleAFlowchart.png)\n",
     "\n"
    ]
   },
@@ -374,7 +391,6 @@
     "\n",
     "## Example in Class\n",
     "\n",
-    "![Collatz Conjecture](../images/CollatzConjecture.jpeg)\n",
     "\n",
     "## Rules\n",
     "\n",
@@ -389,9 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choose value for x\n",
+      "the number is even\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"choose value for x\")\n",
     "\n",
@@ -423,9 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choose value for x\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"choose value for x\")\n",
     "\n",
@@ -450,9 +484,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choose value for x\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"choose value for x\")\n",
     "\n",
@@ -479,9 +522,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "choose value for x\n",
+      "5\n",
+      "16\n",
+      "8.0\n",
+      "4.0\n",
+      "2.0\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"choose value for x\")\n",
     "\n",
@@ -583,14 +641,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Element is present at index 1\n"
+      "Element is present at index 4\n"
      ]
     }
    ],
@@ -616,8 +674,8 @@
     "    return -1\n",
     "\n",
     "\n",
-    "array = [3, 4, 5, 6, 7, 8, 9]\n",
-    "x = 4\n",
+    "array = [6, 19, 22, 56, 65, 78, 82]\n",
+    "x = 65\n",
     "\n",
     "result = BinarySearch(array, x, 0, len(array)-1)\n",
     "\n",
