--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -20,7 +20,9 @@
     "- 1: Sections 3.1 and 3.2: Variables, Assignments, and Data Abstractions \n",
     "- 2: Sections 3.3 and 3.4: Mathematical Expressions and Strings\n",
     "- 3: Sections 3.5, 3.6, and 3.7: Boolean Expression, Conditionals, and Nested Conditionals\n",
-    "- 4: Sections 3.8 and 3.10: Boolean Iteration and Lists"
+    "- 4: Sections 3.8 and 3.10: Boolean Iteration and Lists\n",
+    "- 5: Sections 3.9 and 3.11: Developing Algorithms and Binary Search\n",
+    "- 6: Sections 3.12 and 3.13: Calling and Developing Procedures"
    ]
   },
   {
