--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -222,7 +222,109 @@
     "| x / y | Division | \n",
     "| x // y | Quotient | \n",
     "| x % y | Remainder | \n",
-    "| x ** y | Exponentiation | \n"
+    "| x ** y | Exponentiation | \n",
+    "\n",
+    "\n",
+    "Lessons that discuss this: \n",
+    "- Lesson 2\n",
+    "\n",
+    "<br> \n",
+    "\n",
+    "# Comparison Operators:\n",
+    "\n",
+    "Used to compare two values with each other.. useful in Boolean expressions\n",
+    "\n",
+    "| Operator | Description| \n",
+    "| - | - |\n",
+    "| > | Greater than | \n",
+    "| < | Less than | \n",
+    "| == | Equal to | \n",
+    "| != | Not equal to | \n",
+    "| >= | Greater than or equal to | \n",
+    "| <= | Less than or equal to | \n",
+    "\n",
+    "Lessons that discuss this: \n",
+    "- Lesson 3\n",
+    "\n",
+    "<br> \n",
+    "\n",
+    "# Boolean Expressions and Selection/Iteration:\n",
+    "\n",
+    "Boolean is whether something is true or false. Selections can be made based on boolean expressions, where different outcomes are given when something is true or false. One type of selection could be whether to repeat a certain loop or not, and the decision is made based on a Boolean expression. This could be achieved with while loops\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is small\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5\n",
+    "\n",
+    "# selection:\n",
+    "if num < 100 : \n",
+    "    print(\"The number is small\")\n",
+    "else: \n",
+    "    print (\"The number is large\")\n",
+    "    \n",
+    "# iteration: \n",
+    "\n",
+    "while num < 10:\n",
+    "    num = num + 1\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lessons that discuss this: \n",
+    "- Lesson 3 \n",
+    "\n",
+    "<br> \n",
+    "\n",
+    "# Truth Tables: \n",
+    "\n",
+    "Tables used to organize different possible combinations and whether they would be true or not based on the given parameters: \n",
+    "\n",
+    "Ex: A is true, B is false\n",
+    "\n",
+    "*find example later -- cant find which section talked about it*\n",
+    "\n",
+    "Lessons that discuss this: \n",
+    "?\n",
+    "\n",
+    "<br> \n",
+    "\n",
+    "# Characters [not talked about yet]\n",
+    "\n",
+    "# Strings: \n",
+    "\n",
+    "A string is a type of value, that includes text. Strings are usually denoted by surrounding the text in quotation marks. Even numbers can be classified as strings if they're put in quotation marks\n",
+    "\n",
+    "Lessons that discuss this:\n",
+    "- Lesson 1\n",
+    "\n",
+    "<br> \n",
+    "\n",
+    "# Length [not talked about yet]\n",
+    "\n",
+    "# Concatenation: \n",
+    "\n",
+    "\n"
    ]
   }
  ],
