--- a/_notebooks/2022-12-06-lesson5.ipynb
+++ b/_notebooks/2022-12-06-lesson5.ipynb
@@ -779,6 +779,75 @@
     "\n",
     "If something comes up, feel free to DM us on Slack"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This game will generate 3 random numbers (each between 0 and 20) for each round and will print the highest number. Try to get as high as possible!\n",
+      "Your highest number was:  19\n",
+      "Your other numbers were:\n",
+      "1st number:  5\n",
+      "2nd number:  19\n",
+      "3rd number:  19\n",
+      "\n",
+      "Would you like to play again? Type y/n\n",
+      "\n",
+      "Your highest number was:  5\n",
+      "Your other numbers were:\n",
+      "1st number:  4\n",
+      "2nd number:  2\n",
+      "3rd number:  5\n",
+      "\n",
+      "Would you like to play again? Type y/n\n",
+      "\n",
+      "Thanks for playing\n"
+     ]
+    }
+   ],
+   "source": [
+    "#flowchart: https://docs.google.com/drawings/d/1VuvO3_Ga7B3DxN_oabWJqIb2Bv2riSOHYLKUr7t_tZg/edit?usp=sharing\n",
+    "#all generated #s in the flowchart are randomly generated between 0 and 2... the flowchart also does not include print statements\n",
+    "\n",
+    "print(\"This game will generate 3 random numbers (each between 0 and 20) for each round and will print the highest number. Try to get as high as possible!\")\n",
+    "\n",
+    "import random \n",
+    "\n",
+    "def round():\n",
+    "    num1 = random.randint(0,20)\n",
+    "    final_num = num1\n",
+    "    num2 = random.randint(0,20)\n",
+    "    if num2 > num1:\n",
+    "        final_num = num2\n",
+    "        num3 = random.randint(0,20)\n",
+    "        if num3 > num2: \n",
+    "            final_num = num3\n",
+    "    else: \n",
+    "        num3 = random.randint(0,20)\n",
+    "        if num3 > num1: \n",
+    "         final_num = num3\n",
+    "    print(\"Your highest number was: \", final_num)\n",
+    "    print(\"Your other numbers were:\")\n",
+    "    print(\"1st number: \", num1)\n",
+    "    print(\"2nd number: \", num2)\n",
+    "    print(\"3rd number: \", num3)\n",
+    "    print(\"\")\n",
+    "    print(\"Would you like to play again? Type y/n\")\n",
+    "    ans = str(input())\n",
+    "    if ans == \"y\":\n",
+    "        print(\"\")\n",
+    "        round()\n",
+    "    else: \n",
+    "        print(\"\")\n",
+    "        print(\"Thanks for playing\")\n",
+    "        \n",
+    "round()"
+   ]
   }
  ],
  "metadata": {
