--- a/_notebooks/2022-12-06-lesson5.ipynb
+++ b/_notebooks/2022-12-06-lesson5.ipynb
@@ -781,6 +781,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Flowchart** \n",
+    "https://ekamjot-kaire.github.io/fast-pages/lesson9-11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
