--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -22,7 +22,8 @@
     "- 3: Sections 3.5, 3.6, and 3.7: Boolean Expression, Conditionals, and Nested Conditionals\n",
     "- 4: Sections 3.8 and 3.10: Boolean Iteration and Lists\n",
     "- 5: Sections 3.9 and 3.11: Developing Algorithms and Binary Search\n",
-    "- 6: Sections 3.12 and 3.13: Calling and Developing Procedures"
+    "- 6: Sections 3.12 and 3.13: Calling and Developing Procedures\n",
+    "- 7: Sections 3.14 ans 3.15: Libraries and Random Values"
    ]
   },
   {
