--- a/_notebooks/2022-12-07-lesson6.ipynb
+++ b/_notebooks/2022-12-07-lesson6.ipynb
@@ -222,15 +222,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what day is it? type the first letter, or 'th' for thursday\n",
+      "its wednesday\n",
+      "what time is it?\n",
+      "the time is:  10.15\n",
+      "its 1st period\n"
+     ]
+    }
+   ],
    "source": [
-    "def procedure()\n",
-    "    # code goes here\n",
-    "    return \n",
+    "print(\"what day is it? type the first letter, or 'th' for thursday\")\n",
+    "day = input ()\n",
+    "if day == \"m\":\n",
+    "    print(\"its monday\")\n",
+    "elif day == \"t\": \n",
+    "    print(\"its tuesday\")\n",
+    "elif day == \"w\":\n",
+    "    print(\"its wednesday\")\n",
+    "elif day == \"th\":\n",
+    "    print(\"its thursday\")\n",
+    "elif day == \"f\": \n",
+    "    print(\"its friday\")\n",
+    "elif day == \"s\":\n",
+    "    print(\"its the weekend! (what do you need the schedule for?)\")\n",
     "\n",
-    "# code goes here"
+    "\n",
+    "print(\"what time is it?\") #this only works if you write the time as a decimal because im not smart enough to do actual time\n",
+    "time = float(input()) \n",
+    "print(\"the time is: \", time)\n",
+    "\n",
+    "if time < 8.00:\n",
+    "    time = time + 12\n",
+    "\n",
+    "\n",
+    "def schedule(time):\n",
+    "    if day == \"w\": #wednesday \n",
+    "        if time < 9.55: \n",
+    "            print(\"school has not started yet!\")\n",
+    "        elif 9.55 <= time <= 10.53:\n",
+    "            print(\"its 1st period\")\n",
+    "        elif 10.58 <= time <= 11.56:\n",
+    "            print(\"its 2nd period\")\n",
+    "        elif 11.56 < time <= 12.06:\n",
+    "            print(\"its break\")\n",
+    "        elif 12.11 <= time <= 13.09: \n",
+    "            print(\"its 3rd period\")\n",
+    "        elif 13.09 < time <= 13.39:\n",
+    "            print(\"its lunch\")\n",
+    "        elif 13.44 <= time <= 14.42: \n",
+    "            print(\"its 4th period\")\n",
+    "        elif 14.47 <= time <= 15.45: \n",
+    "            print(\"its 5th period\")\n",
+    "        elif time > 15.45:\n",
+    "            print(\"school is over :)\")\n",
+    "        else:\n",
+    "            print(\"its passing period\") \n",
+    "    elif day == \"f\": #friday\n",
+    "        if time < 8.35: \n",
+    "            print(\"school has not started yet!\")\n",
+    "        elif 8.35 <= time <= 9.49:\n",
+    "            print(\"its 1st period\")\n",
+    "        elif 9.54 <= time <= 11.08:\n",
+    "            print(\"its 2nd period\")\n",
+    "        elif 11.08 < time <= 11.18:\n",
+    "            print(\"its break\")\n",
+    "        elif 11.23 <= time <= 12.37: \n",
+    "            print(\"its 3rd period\")\n",
+    "        elif 12.37 < time <= 13.07:\n",
+    "            print(\"its lunch\")\n",
+    "        elif 13.12 <= time <= 14.26: \n",
+    "            print(\"its 4th period\")\n",
+    "        elif 14.31 <= time <= 15.45: \n",
+    "            print(\"its 5th period\")\n",
+    "        elif time > 15.45:\n",
+    "            print(\"school is over :)\")\n",
+    "        else:\n",
+    "            print(\"its passing period\") \n",
+    "    else:\n",
+    "        if time < 8.35: \n",
+    "            print(\"school has not started yet!\")\n",
+    "        elif 8.35 <= time <= 9.44:\n",
+    "            print(\"its 1st period\")\n",
+    "        elif 9.49 <= time <= 10.58:\n",
+    "            print(\"its 2nd period\")\n",
+    "        elif 10.58 < time <= 11.08:\n",
+    "            print(\"its break\")\n",
+    "        elif 11.13 <= time <= 12.22: \n",
+    "            print(\"its 3rd period\")\n",
+    "        elif 12.22 < time <= 12.52:\n",
+    "            print(\"its lunch\")\n",
+    "        elif 12.57 <= time <= 14.06: \n",
+    "            print(\"its 4th period\")\n",
+    "        elif 14.06 < time <= 14.31: \n",
+    "            print(\"its office hours\")\n",
+    "        elif 14.36 < time <= 15.45: \n",
+    "            print(\"its 5th period\")\n",
+    "        elif time > 15.45:\n",
+    "            print(\"school is over :)\")\n",
+    "        else:\n",
+    "            print(\"its passing period\")  \n",
+    "            \n",
+    "        \n",
+    "schedule(time)\n"
    ]
   }
  ],
