--- a/_notebooks/2022-11-30-lesson7.ipynb
+++ b/_notebooks/2022-11-30-lesson7.ipynb
@@ -213,12 +213,130 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# CODE CODE CODE"
+    "### 1) odd and even "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how many random numbers would you like to generate?\n",
+      "all numbers generated:  [24, 36, 40, 30, 19, 13, 20, 61, 89, 90, 5, 68, 28, 50, 0, 24, 90, 47, 1, 43, 77, 13, 68, 6, 87, 41, 27, 71, 57, 77]\n",
+      "even numbers:  [24, 36, 40, 30, 20, 90, 68, 28, 50, 0, 24, 90, 68, 6]\n",
+      "odd numbers:  [19, 13, 61, 89, 5, 47, 1, 43, 77, 13, 87, 41, 27, 71, 57, 77]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "print(\"how many random numbers would you like to generate?\")\n",
+    "n = int(input()) #input for how many random #s the user would like generated \n",
+    "\n",
+    "allNum = [] #list of all numbers \n",
+    "even = []\n",
+    "odd = []\n",
+    "\n",
+    "a = 0\n",
+    "while a < n: \n",
+    "    b = random.randint(0,100)\n",
+    "    allNum.append(b)\n",
+    "    if b % 2 == 1: \n",
+    "        odd.append(b)\n",
+    "    else:\n",
+    "        even.append(b)\n",
+    "    a = a + 1\n",
+    "\n",
+    "print(\"all numbers generated: \", allNum)\n",
+    "print(\"even numbers: \", str(even))\n",
+    "print(\"odd numbers: \", str(odd))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2) finding the derivative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "derivative of 2x^5 - 6x^2 + 24x:\n",
+      "    4\n",
+      "10 x - 12 x + 24\n",
+      "\n",
+      "derivative of (13x^4 + 4x^2) / 2 when x=9:\n",
+      "18990.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1: derivative of 2x^5 - 6x^2 + 24x: \n",
+    "\n",
+    "import numpy as np \n",
+    "\n",
+    "fn1 = np.poly1d([2, 0, 0, -6, 24, 0]) #function defines polynomial\n",
+    "deriv1 = fn1.deriv() #function finds derivative \n",
+    "print(\"derivative of 2x^5 - 6x^2 + 24x:\")\n",
+    "print(deriv1) # should be 10x^4 - 12x + 24\n",
+    "\n",
+    "#2: derivative of (13x^4 + 4x^2) / 2 when x = 9\n",
+    "\n",
+    "fn2 = np.poly1d([13, 0, 4, 0, 0]) * 1/2 #function multiplied by 1/2 to give the denominator of 2\n",
+    "deriv2 = fn2.deriv()\n",
+    "print(\"\")\n",
+    "print(\"derivative of (13x^4 + 4x^2) / 2 when x=9:\")\n",
+    "print(deriv2(9)) #placing the value of x in parenthesis gives the derivative when x equals that number\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3) random dogs and cats assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dog2', 'dog3', 'cat8', 'dog9', 'dog10', 'cat6', 'cat7', 'cat4', 'cat5', 'dog8', 'dog5', 'cat1', 'cat3', 'dog7', 'cat9', 'dog4', 'cat2', 'dog1', 'cat10', 'dog6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "pets = [\"dog1\", \"dog2\", \"dog3\", \"dog4\", \"dog5\", \"dog6\", \"dog7\", \"dog8\", \"dog9\", \"dog10\",\n",
+    "        \"cat1\", \"cat2\", \"cat3\", \"cat4\", \"cat5\", \"cat6\", \"cat7\", \"cat8\", \"cat9\", \"cat10\"]\n",
+    "\n",
+    "random.shuffle(pets)\n",
+    "\n",
+    "print(str(pets))\n"
    ]
   }
  ],
